fixed copyright font size on mobile portrait

--- a/responsive.css
+++ b/responsive.css
@@ -75,5 +75,6 @@
 
   .copyright {
     top: 95.5%;
+    font-size: 0.6em;
   }
 }
